chore(): add dependencies + declare test in parent build